# nlpo3

./: .gitignore  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: build-python-wheels.yml  test-main-lib.yml  test-nlpo3-cli.yml  test-nlpo3-js.yml  test-nlpo3-nodejs.yml  test-nlpo3-python.yml
benches/: tokenizer.rs
docs/: design.md  impl-notes.md  implementation.md
nlpo3-cli/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
nlpo3-cli/src/: main.rs
nlpo3-js/: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
nlpo3-js/nlpo3/: index.ts  rust_mod.d.ts
nlpo3-js/src/: lib.rs
nlpo3-js/tests/: test_tokenizers.js
nlpo3-nodejs/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
nlpo3-nodejs/nlpo3/: index.ts  rust_mod.d.ts  rust_mod.js  rust_mod.ts
nlpo3-nodejs/src/: lib.rs
nlpo3-nodejs/tests/: test_tokenizers.js
nlpo3-nodejs/tests/data/: test_dict.txt
nlpo3-python/: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
nlpo3-python/nlpo3/: __init__.py  _deepcut.py  _newmm.py  _nlpo3_python_backend.pyi  deepcut.py
nlpo3-python/notebooks/: nlpo3_segment_benchmarks.ipynb
nlpo3-python/src/: deepcut.rs  lib.rs
nlpo3-python/tests/: test_tokenize.py
src/: NOTE_ON_STRING.md  char_string.rs  lib.rs  tokenizer.rs
src/tokenizer/: deepcut.rs  dict_backend.rs  dict_reader.rs  fst_dict.rs  newmm.rs  parallel_helper.rs  parallel_options.rs  tcc.rs  tokenizer_trait.rs  trie_char.rs
src/tokenizer/tcc/: tcc_rules.rs  tcc_tokenizer.rs
tests/: test_tokenizer.rs
tests/data/: 10k.txt  500-long.txt  500-short.txt  gen-dicts.py  text-wikipedia-l.txt  text-wikipedia-m.txt  text-wikipedia-s.txt
