[package]
name = "nlpo3-cli"
version = "2.0.0"
edition = "2021"
rust-version = "1.88.0"
license = "Apache-2.0"
authors = [
    "Vee Satayamas <5ssgdxltv@relay.firefox.com>",
    "Arthit Suriyawongkul",
]
description = "Command line interface for nlpO3, a Thai natural language processing library"
categories = ["text-processing", "command-line-utilities"]
keywords = [
    "thai",
    "tokenizer",
    "tokenization",
    "text-processing",
    "nlp",
    "natural-language-processing",
    "word-segmentation",
    "pythainlp",
    "cli",
]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-cli/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-cli/README.md"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "nlpo3"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
nlpo3 = { version = "2.0", path = ".." }
