[package]
name = "nlpo3-cli"
version = "2.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"
authors = [
    "Vee Satayamas <5ssgdxltv@relay.firefox.com>",
    "Arthit Suriyawongkul",
]
description = "Command line interface for nlpO3, a Thai natural language processing library"
categories = ["text-processing", "command-line-utilities"]
keywords = [
    "thai",
    "tokenizer",
    "nlp",
    "text-processing",
    "cli",
]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-cli/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://docs.rs/nlpo3-cli"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/src/**",
    "/words_th.txt",
]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "nlpo3"
path = "src/main.rs"

[features]
default = ["deepcut"]
deepcut = ["nlpo3/deepcut"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
nlpo3 = { version = "2.0", path = ".." }
