[package]
name = "nlpo3-js"
version = "2.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"
authors = ["Thanathip Suntorntip Gorlph", "Arthit Suriyawongkul"]
description = "JavaScript binding for nlpO3 Thai language processing library"
categories = ["text-processing"]
keywords = [
    "thai",
    "tokenizer",
    "nlp",
    "text-processing",
    "pythainlp",
]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-js/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-js/README.md"
readme = "README.md"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["deepcut"]
deepcut = ["nlpo3/deepcut"]

[dependencies]
nlpo3 = { version = "2.0", path = ".." }

[dependencies.neon]
version = "1.1.1"
default-features = false
features = ["napi-6"]
