[package]
name = "nlpo3-nodejs"
version = "2.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"
authors = ["Thanathip Suntorntip Gorlph", "Arthit Suriyawongkul"]
description = "Node.js binding for nlpO3 Thai language processing library"
categories = ["text-processing"]
keywords = [
    "thai",
    "tokenizer",
    "tokenization",
    "text-processing",
    "nlp",
    "natural-language-processing",
    "word-segmentation",
    "pythainlp",
]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-nodejs/"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-nodejs/README.md"
readme = "README.md"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
lazy_static = "1.5"
nlpo3 = { version = "2.0", path = ".." }

[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-6"]
