[package]
name = "nlpo3-python"
version = "2.0.0"
edition = "2024"
rust-version = "1.88.0"
license = "Apache-2.0"
authors = [
    "Thanathip Suntorntip Gorlph",
    "Arthit Suriyawongkul",
    "Wannaphong Phatthiyaphaibun <wannaphong@yahoo.com>",
]
description = "Python binding for nlpO3 Thai language processing library"
categories = ["text-processing"]
keywords = [
    "thai",
    "tokenizer",
    "nlp",
    "text-processing",
    "pythainlp",
]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-python"
repository = "https://github.com/PyThaiNLP/nlpo3/"
documentation = "https://github.com/PyThaiNLP/nlpo3/blob/main/nlpo3-python/README.md"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/pyproject.toml",
    "/MANIFEST.in",
    "/src/lib.rs",
    "/nlpo3/__init__.py",
    "/nlpo3/_nlpo3_python_backend.pyi",
    "/nlpo3/py.typed",
]

[features]
default = ["deepcut"]
deepcut = ["nlpo3/deepcut"]

[lib]
name = "_nlpo3_python_backend"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
nlpo3 = { version = "2.0", path = ".." }

[dependencies.pyo3]
version = "0.28"
features = ["extension-module"]
