[build-system]
requires = ["setuptools", "setuptools-rust", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpo3"
version = "1.4.0"
description = "Python binding for nlpO3 Thai language processing library in Rust"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
  "thai",
  "tokenizer",
  "tokenization",
  "text-processing",
  "nlp",
  "word-segmentation",
  "pythainlp",
]
authors = [
  { name = "Thanathip Suntorntip" },
  { name = "Arthit Suriyawongkul" },
  { name = "Wannaphong Phatthiyaphaibun", email = "wannaphong@yahoo.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Developers",
  "Natural Language :: Thai",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/PyThaiNLP/nlpo3/tree/main/nlpo3-python"
repository = "https://github.com/PyThaiNLP/nlpo3/"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.vscode
  | build
  | dist
)/
'''

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_code_links = true
show_error_context = true
strict = true
strict_equality = true
strict_equality_for_none = true
warn_unreachable = true
# _nlpo3_python_backend is a compiled Rust extension; types come from the
# .pyi stub.  Ignore the missing-module error at the package level.
ignore_missing_imports = true

[tool.pylint.main]
# Exclude type-stub files: pylint does not fully understand .pyi semantics
# (e.g. the mandatory use of ... as function bodies and declared-but-unused
# stub arguments).
ignore-patterns = [".*\\.pyi$"]

[tool.pylint.typecheck]
# _nlpo3_python_backend is a compiled Rust extension that requires a build
# step not run during linting.  Suppress E0401 import-error for this module.
# Pylint resolves the relative import `from ._nlpo3_python_backend import ...`
# under either name depending on context, so both forms are listed.
ignored-modules = ["nlpo3._nlpo3_python_backend", "_nlpo3_python_backend"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nlpo3"]
exclude = ["notebooks", "tests"]

[[tool.setuptools-rust.ext-modules]]
target = "nlpo3._nlpo3_python_backend"
path = "Cargo.toml"
binding = "PyO3"
strip = "No"
